sndio: fix crash when volume is adjusted while playback is stopped

An use-after-free caused by calls to the mute/volume functions after the handle is freed.

http://cvsweb.openbsd.org/cgi-bin/cvsweb/checkout/ports/x11/vlc/patches/patch-modules_audio_output_sndio_c?rev=1.1&content-type=text/plain&hideattic=1